--- a/playbooks/roles/deploy/templates/ifcfg-ens192.j2
+++ b/playbooks/roles/deploy/templates/ifcfg-ens192.j2
@@ -9,13 +9,13 @@ IPV6_AUTOCONF="yes"
 IPV6_DEFROUTE="yes"
 IPV6_FAILURE_FATAL="no"
 IPV6_ADDR_GEN_MODE="stable-privacy"
-NAME="ens192"
+NAME="{{name}}"
 UUID="05b3e8d2-2aee-4eaa-9be1-3d49c6abd527"
-DEVICE="ens192"
-ONBOOT="yes"
+DEVICE="{{device}}"
+ONBOOT="{{onboot}}"
 IPADDR="{{ ipaddr }}"
-PREFIX="24"
-GATEWAY="192.168.3.254"
-DNS1="8.8.8.8"
-DNS2="8.8.4.4"
-DOMAIN="powellcompanies.com"
+PREFIX="{{prefix}}"
+GATEWAY="{{gateway}}"
+DNS1="{{dns1}}"
+DNS2="{{dns2}}"
+DOMAIN="{{domain}}"
