Changing variable name "name".  Its a keyword.

--- a/playbooks/roles/deploy/templates/ifcfg-ens192.j2
+++ b/playbooks/roles/deploy/templates/ifcfg-ens192.j2
@@ -9,7 +9,7 @@ IPV6_AUTOCONF="yes"
 IPV6_DEFROUTE="yes"
 IPV6_FAILURE_FATAL="no"
 IPV6_ADDR_GEN_MODE="stable-privacy"
-NAME="{{name}}"
+NAME="{{devicename}}"
 UUID="05b3e8d2-2aee-4eaa-9be1-3d49c6abd527"
 DEVICE="{{device}}"
 ONBOOT="{{onboot}}"
