--- a/playbooks/roles/bind/templates/named.conf.j2
+++ b/playbooks/roles/bind/templates/named.conf.j2
@@ -11,13 +11,13 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-	listen-on port 53 { {{ansible_default_ipv4.address}}; 127.0.0.1 };
+	listen-on port 53 { {{ansible_default_ipv4.address}}; 127.0.0.1; };
 	//listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
 	statistics-file "/var/named/data/named_stats.txt";
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
-	allow-query     { {{allowquery}}; localhost };
+	allow-query     { {{allowquery}}; localhost; };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
