--- a/playbooks/roles/bind/templates/named.conf.j2
+++ b/playbooks/roles/bind/templates/named.conf.j2
@@ -58,13 +58,13 @@ zone "." IN {
 zone "powellcompanies.com" {
     type master;
     file "/var/named/chroot/etc/powellcompanies.com.zone";
-    allow-update { key rndc-key; };
+    allow-update { key named.iscdlv.key; };
 };
 
 zone "3.168.192.in-addr.arpa" {
     type master;
     file "/var/named/chroot/etc/powellcompanies.com.rev.zone";
-    allow-update { key rndc-key; };
+    allow-update { key named.iscdlv.key; };
 };
 
 include "/etc/named.rfc1912.zones";
