--- a/playbooks/roles/bind/templates/named.conf.j2
+++ b/playbooks/roles/bind/templates/named.conf.j2
@@ -51,6 +51,11 @@ logging {
         };
 };
 
+key dhcp_updater {
+algorithm hmac-md5;
+secret “gEI4NxZ7u7yJSv9qyEiaqQ==”;
+};
+
 zone "." IN {
 	type hint;
 	file "named.ca";
@@ -59,13 +64,13 @@ zone "." IN {
 zone "powellcompanies.com" {
     type master;
     file "/var/named/chroot/etc/powellcompanies.com.zone";
-    allow-update { key named.iscdlv.key; };
+    allow-update { key "dhcp_updater"; };
 };
 
 zone "3.168.192.in-addr.arpa" {
     type master;
     file "/var/named/chroot/etc/powellcompanies.com.rev.zone";
-    allow-update { key named.iscdlv.key; };
+    allow-update { key "dhcp_updater"; };
 };
 
 include "/etc/named.rfc1912.zones";
