Removing secret from role and putting it in variables

--- a/playbooks/roles/bind/templates/named.conf.j2
+++ b/playbooks/roles/bind/templates/named.conf.j2
@@ -53,7 +53,7 @@ logging {
 
 key dhcp_updater {
 algorithm hmac-md5;
-secret “gEI4NxZ7u7yJSv9qyEiaqQ==”;
+secret "{{ddns_secret}}";
 };
 
 zone "." IN {
