--- a/playbooks/roles/common/templates/CentOS-Base.repo.j2
+++ b/playbooks/roles/common/templates/CentOS-Base.repo.j2
@@ -1,7 +1,23 @@
 [base]
 name=CentOS-$releasever - Base
-#mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=os&infra=$infra
-#baseurl=http://mirror.centos.org/centos/$releasever/os/$basearch/
-baseurl=/mnt/yum_repos/CentOS-7/base/
+baseurl={{yum_mount_point}}/CentOS-7/base/
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+[epel]
+name=CentOS-$releasever - Epel
+baseurl={{yum_mount_point}}/CentOS-7/epel/
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+[extras]
+name=CentOS-$releasever - Extras
+baseurl={{yum_mount_point}}/CentOS-7/extras/
+gpgcheck=0
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
+
+[updates]
+name=CentOS-$releasever - Updates
+baseurl={{yum_mount_point}}/CentOS-7/updates/
 gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
