--- a/playbooks/roles/common/templates/CentOS-Base.repo.j2
+++ b/playbooks/roles/common/templates/CentOS-Base.repo.j2
@@ -1,23 +1,23 @@
 [base]
 name=CentOS-$releasever - Base
-baseurl={{yum_mount_point}}/CentOS-7/base/
+baseurl={{repo_mount}}/CentOS-7/base/
 gpgcheck=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
 
 [epel]
 name=CentOS-$releasever - Epel
-baseurl={{yum_mount_point}}/CentOS-7/epel/
+baseurl={{repo_mount}}/CentOS-7/epel/
 gpgcheck=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
 
 [extras]
 name=CentOS-$releasever - Extras
-baseurl={{yum_mount_point}}/CentOS-7/extras/
+baseurl={{repo_mount}}/CentOS-7/extras/
 gpgcheck=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
 
 [updates]
 name=CentOS-$releasever - Updates
-baseurl={{yum_mount_point}}/CentOS-7/updates/
+baseurl={{repo_mount}}/CentOS-7/updates/
 gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7
